# RAGchatbot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-build.yaml
backend/: Dockerfile  main.py
frontend/: Dockerfile  requirements.txt  streamlit_app.py
